# autonomous-impact-analyst

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: settings.yml
requirements/: base.txt  dev.txt  lock.txt  test.txt
scripts/: agent_metrics.py  demo.sh  fetch_fixtures.py  seed_databricks.py  setup.sh  simulate_anomalies.py  verify_raw_tables.py
src/: logging_config.py
src/actions/: dbt_runner.py  executor.py  github_pr.py  slack_notifier.py
src/agent/: action_planner.py  correlator.py  graph_agent.py  incident_store.py  risk_scorer.py  types.py
src/anomaly_detection/: anomaly_events.py  data_quality_monitor.py  freshness_monitor.py  schema_monitor.py  snapshot_store.py  test_failure_monitor.py
src/common/: atomic_json.py  identifiers.py
src/dbt_project/: dbt_project.yml  profiles.yml
src/exposure_bot/: mart_queries.py  slack_bot.py
src/graph_engine/: lineage_builder.py  manifest_parser.py  neo4j_loader.py  queries.py  types.py
src/orchestration/: assets.py  dagster_definitions.py  jobs.py  schedules.py
src/utils/: retry.py
src/web/: app.py
tests/: conftest.py  test_phase_0.py  test_phase_8.py
tests/fixtures/: catalog.json  manifest.json
tests/test_actions/: test_actions_6a.py
tests/test_agent/: test_enhancements.py  test_graph_agent.py  test_reliability.py  test_risk_and_actions.py
tests/test_anomaly_detection/: test_quality_freshness_tests.py  test_schema_monitor.py
tests/test_exposure_bot/: test_exposure_bot.py
tests/test_orchestration/: test_assets.py
(+27 files in other folders)
