[project]
name = "autonomous-impact-analyst"
version = "0.1.0"
description = "Agentic system that monitors a crypto/DeFi warehouse for anomalies and takes automated action."
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
# Put the repo root on sys.path so `import src...` works whether tests are run
# via the `pytest` console script (CI) or `python -m pytest` (local).
pythonpath = ["."]
markers = [
    "phase_0: Phase 0 scaffolding tests",
    "phase_1: Phase 1 tests",
    "phase_2: Phase 2 tests",
    "phase_3: Phase 3 tests",
    "phase_4: Phase 4 tests",
    "phase_5: Phase 5 tests",
    "phase_6: Phase 6 tests",
    "phase_7: Phase 7 tests",
    "phase_8: Phase 8 tests",
    "integration: integration tests requiring live external services",
]
